refactor: 문법 변경